# flappy_bird_bevy

./: Cargo.toml  README.md  flake.nix
assets/shaders/: custom_material.wgsl
src/: anchor.rs  animation.rs  background.rs  camera.rs  game.rs  ground.rs  level.rs  main.rs  networking.rs  physics.rs  pipes.rs  player.rs  stacking.rs  tiling.rs  util.rs
src/menu/: connect.rs  lobby.rs  main.rs  mod.rs
